About Page Complete
* Finishes construction of the About page (Our Story).
* Styles the About page to be almost identical to the one on `acs-susy`.
* Adds a route to `web.php` for the About page.
* Fixes the link to the About page in the navbar to the correct route.
* Fixes the class list of the `h1` element on the General Information page.

Signed-off-by: Chris McGee <chris@chrismcgee.info>

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11653,6 +11653,14 @@ header a {
   max-width: 3.1458in;
 }
 
+#about-image {
+  max-width: 50%;
+}
+
+.signature {
+  max-width: 15em;
+}
+
 footer p {
   text-align: center;
 }
