Contact Page Complete
* Completes the Contact Us page.
* Styles the Contact Us page to be almost identical to the one in `acs-susy`.
* Adds some additional styling, such as making word breaks and hyphens global.
* Fixes the product thumbnail size on smaller screens.
* Creates an easy partial/component view for the title of the general pages.
* Updates the Clipart page template as well as the other Information pages to use the new component view.
* Creates a route for the new Contact Us page.
* Fixes the link in the Navbar for the Contact Us page to go to the new route.

Signed-off-by: Chris McGee <chris@chrismcgee.info>

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10604,6 +10604,11 @@ body {
   background: #000000 url("/images/background-planes-2800x1600.jpg") no-repeat top center;
   font-family: proxima-nova, Helvetica Neue, Helvetica, Arial, sans-serif;
   color: #444444;
+  -ms-word-break: break-word;
+  word-break: break-word;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
 }
 
 h1,
@@ -11427,8 +11432,8 @@ header a {
 .thumbnail__image {
   position: absolute;
   border: none;
-  width: 200px;
-  height: 200px;
+  width: 194px;
+  height: 194px;
   top: 0;
   left: 0;
 }
