Cross-Browser Check
* Fixes a bug with the "Features & Options" pane being shown on Product Lines where there are no Features nor Options.
* Fixes the SVG images to be shown properly on IE.
* Updates/Upgrades NPM and Composer packages.

Signed-off-by: Chris McGee <chris@chrismcgee.info>

--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -838,6 +838,10 @@ header a {
   border-bottom: 1px solid color(accent);
 } // .typefaces__name
 
+.svg {
+  width: 100%;
+  height: auto;
+} // .svg
 
 // General Information Page --------------------------------------------------
 .general-info {
