Bug Fixes and Features
* Fixes many broken links.
* Style changes to make some text easier to read (and even see!).
* Replaces missing text in the first paragraph of the General Information page.
* Utilizes Voyager's `setting()`s to more generalize some site data.
* Removes the entire `/assets-raw` directory from the repo.
* Integrates (hopefully) Google Analytics.
* Changes a bit of grammar on the `about.blade.php` page.
* Other minor changes.
* Gets `deploy.php` ready for both the Beta and Production servers.
* Removes the (hopefully now unnecessary) `package-lock.json` file.

Signed-off-by: Chris McGee <chris@chrismcgee.info>

--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -331,7 +331,7 @@ header a {
     font-family: font(headings);
     font-weight: bold;
     border-bottom: $size-border solid color(text-alt);
-    text-shadow: 0 1px 0 color(text-shadow1), 0 -1px 0 color(text-shadow2);
+    text-shadow: 0 -1px 0 color(text-shadow2), 0 1px 0 color(text-shadow1);
   } // h2, h3, h4
 
   p,
@@ -845,6 +845,11 @@ header a {
 
 // General Information Page --------------------------------------------------
 .general-info {
+
+  h3 {
+    border-bottom: 2px solid color(accent);
+    margin-top: 1.2em;
+  }
 
   @include media-breakpoint-down(sm) {
     font-size: 0.8em;
