--- a/resources/assets/sass/variables/_colors.scss
+++ b/resources/assets/sass/variables/_colors.scss
@@ -7,7 +7,7 @@ $colors: (
   bg-lighter          : lighten(#333333, 30%),
   bg-lightest         : lighten(#333333, 60%),
   text                : #444444,
-  text-shadow1        : lighten(#444444, 40%),
+  text-shadow1        : #ffffff,
   text-shadow2        : darken(#444444, 60%),
   text-alt            : lighten(#444444, 50%),
   menu-stop1          : #dbdada,
