--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,10 @@
+
 // Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
+
+// Variables
+@import 'variables';
 
 // Bootstrap overrides (MUST come before Bootstrap import.)
 @import "bootstrap-overrides";
