--- a/resources/sass/variables/_colors.scss
+++ b/resources/sass/variables/_colors.scss
@@ -1,15 +1,17 @@
 // Colors --------------------------------------------------
 $colors: (
   bg                  : #f5f8fa,
-  bg-abs              : #000000,
-  bg-abs-lighter      : lighten(#000000, 20%),
-  bg-main             : #333333,
-  bg-lighter          : lighten(#333333, 30%),
-  bg-lightest         : lighten(#333333, 60%),
+  bg-abs              : #00122f,
+  bg-abs-lighter      : lighten(#00122f, 10%),
+  bg-main             : #002662,
+  bg-lighter          : lighten(#002662, 20%),
+  bg-lightest         : lighten(#002662, 40%),
   text                : #444444,
-  text-shadow1        : #ffffff,
-  text-shadow2        : darken(#444444, 60%),
-  text-alt            : lighten(#444444, 50%),
+  text-shadow1        : rgba(255, 255, 255, 0.80),
+  text-shadow2        : darken(rgba(255, 255, 255, 0.50), 80%),
+  text-alt            : rgba(255, 255, 255, 0.80),
+  text-white          : #ffffff,
+  text-black          : #000000,
   menu-stop1          : #dbdada,
   menu-stop2          : darken(#dbdada, 20%),
   link                : #2c679b,
@@ -18,9 +20,9 @@ $colors: (
   linkalt             : #00ced1,
   linkalt-hover       : lighten(#00ced1, 10%),
   linkalt-active      : lighten(#00ced1, 20%),
-  accent              : #c61d23,
-  accent-dark         : darken(#c61d23, 10%),
-  accent-darker       : darken(#c61d23, 20%),
+  accent              : #881a1d,
+  accent-dark         : darken(#881a1d, 10%),
+  accent-darker       : darken(#881a1d, 20%),
 
   napkin-stop1        : #f04d3f,
   napkin-stop2        : darken(#f04d3f, 10%),
@@ -43,10 +45,10 @@ $colors: (
 // Gradients --------------------------------------------------
 $gradients: (
   menu                : linear-gradient(color(menu-stop1), color(menu-stop2)),
-  sidebar             : linear-gradient(to bottom, lighten(color(bg-abs), 30%), lighten(color(bg-abs), 10%)),
-  accent-selected     : linear-gradient(to bottom, darken(color(accent), 10%), darken(color(accent), 20%)),
-  accent              : linear-gradient(to bottom, darken(color(accent), 20%), darken(color(accent), 30%)),
-  swatch-bg           : linear-gradient(to bottom, lighten(color(bg-abs), 20%), lighten(color(bg-abs), 10%)),
+  sidebar             : linear-gradient(to bottom, lighten(color(bg-abs), 10%), lighten(color(bg-abs), 5%)),
+  accent-selected     : linear-gradient(to bottom, darken(color(accent), 5%), darken(color(accent), 10%)),
+  accent              : linear-gradient(to bottom, darken(color(accent), 10%), darken(color(accent), 20%)),
+  swatch-bg           : linear-gradient(to bottom, lighten(color(bg-abs), 10%), lighten(color(bg-abs), 5%)),
 
   napkin              : linear-gradient(to bottom, color(napkin-stop1), color(napkin-stop2)),
   coaster             : linear-gradient(color(coaster-stop1), color(coaster-stop2)),
