Updates Page Background

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10754,7 +10754,7 @@ html {
 }
 
 body {
-  background: #000000 url("/storage/images/background-planes-2800x1600.jpg") no-repeat top center;
+  background: #00122f url("/storage/images/background-planes-2800x1600.jpg") no-repeat top center;
   font-family: proxima-nova, Helvetica Neue, Helvetica, Arial, sans-serif;
   color: #444444;
   -ms-word-break: break-word;
